# Misc

./: .gitignore  .gitmodules
Arduino/: .gitignore
Arduino/test/: test.ino
HTML/: ScoreBoard.html  copy.html  text copy.html  text.html
Linux/: .gitignore  Linux_A.md  Linux_Notes.md  Regular_Expression.md  Report.md  fwrite.md  git.md  tmp.md  tmp2.md
MASM/: .gitignore
MASM/MASMTEST1/: MASMTEST1.sln  MASMTEST1.vcxproj  MASMTEST1.vcxproj.filters  masm1.asm  masm2.asm
MASM/MSAMTEST/: MSAMTEST.sln  MSAMTEST.vcxproj  MSAMTEST.vcxproj.filters  msam.asm
Python/: 1.py  AnacondaEnvs.md  bio_devices.json  genochemy.py  input-gui.py  input-ime-gui.py  input-ime.py  input.py  raw.py  test.py
Python/CollegePhysicsExperiment/: RC.py  ThermalConductivity.py  oil.py  spectrometer.py  test.py  vsound.py
Python/Computational_Thinking_Course/: 1-1.py  1-2.py  1-3.py  1-4.py  2-1.py  2-2.py  2-3.py  2-4.py  2-5.py  3-1.py  3-2.py  4-1.py  4-2.py  4-3.py  4-4.py  5-1.py  6-1.py  7-1.py  8-1.py  8-2.py
Python/Matrix/: Mat.py
Python/MovieRating/: recommendation-system.ipynb  recommendation-systems-svd.ipynb  starter-movie-lens-dataset-31794981-0.ipynb
Python/Others/: 1998.txt  2003.txt  2004-1.txt  2004-2.txt  2008.txt  2013.txt  2018.txt  2023.txt
Python/第3次课-基于水色图像的水质评价/: code - 副本.py.baiduyun.uploading.cfg  code_ref.py.baiduyun.uploading.cfg
SQL/: note.md
SQL/Lab/: 15-存储管理(Storage Manager)  MySQL-数据库应用开发(JAVA篇)  download.sh  目录说明readme.txt
SQL/Lab/15-Rucbase/cmake-test/: CMakeLists.txt  CMakePresets.json  MemoryIterator.h  allocator.cpp  begin_test.cpp  main.cpp
Verilog/: .gitignore
Verilog/Lab_1/: Lab_1.xpr
Verilog/Lab_2/: Lab_2.xpr  sim.bat
Verilog/Lab_3/: Lab_3.xpr  sim.bat
Verilog/Lab_4/: Lab_4.xpr  sim.bat
code/: .clangd  .gdb_history  .gdbinit  .gitignore  CMakeLists.txt  breakpoints.txt  compile_commands.json  ide_bp.txt
code/ftrace/: CMakeLists.txt  another.sh  available_filter_functions.txt  ftrace.sh  ftrace_func_graph.sh  ftrace_official.sh  ftrace_origin.sh  initial.txt  options.txt  out.sh  read.sh  test.sh  trace-cmd.sh  trace_options.txt  write_test  write_test.c  write_test.ftrace.backup.txt  write_test.ftrace.txt  write_test.ftrace_func_graph.backup.txt  write_test.ftrace_func_graph.kernel-4.19.backup.txt  write_test.ftrace_func_graph.kernel-6.6.36.3.backup.txt.cs  (+2 more)
code/user_mode/: CMakeLists.txt
code/user_mode/pid/: CMakeLists.txt  pid  pid.cpp  ucontext  ucontext.c  ucontext1  ucontext1.c
code/user_mode/write_file/: CMakeLists.txt  write_file  write_file.c
(+679 files in other folders)
